<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_add"
            android:layout_width="116dp"
            android:layout_height="116dp"
            android:src="@color/white_transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/home_add_icon"
            android:src="@drawable/baseline_person_add_alt_1_24"
            app:layout_constraintBottom_toBottomOf="@+id/civ_add"
            app:layout_constraintEnd_toEndOf="@+id/civ_add"
            app:layout_constraintStart_toStartOf="@+id/civ_add"
            app:layout_constraintTop_toTopOf="@+id/civ_add"
            app:tint="@color/white" />

        <EditText
            android:id="@+id/et_name"
            style="@style/RoundedRectangle"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="64dp"
            android:autofillHints="name"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingHorizontal="24dp"
            android:paddingBottom="8dp"
            android:paddingTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/civ_add" />

        <EditText
            android:id="@+id/et_palindrome"
            style="@style/RoundedRectangle"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:hint="@string/palindrome"
            android:inputType="text"
            android:paddingHorizontal="24dp"
            android:paddingBottom="8dp"
            android:paddingTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_name" />

        <Button
            android:id="@+id/btn_check"
            style="@style/RoundedRectangle"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="48dp"
            android:paddingHorizontal="24dp"
            android:paddingVertical="4dp"
            android:text="@string/check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_palindrome" />

        <Button
            android:id="@+id/btn_next"
            style="@style/RoundedRectangle"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="24dp"
            android:paddingHorizontal="24dp"
            android:paddingVertical="4dp"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_check" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>